--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
 DATABASE_URL=postgres://postgres:root@127.0.0.1:5432/<nombre_db>
+
+postgres://movies_db_trabajo03_user:YRjLPj5PRWUissVUgKpRLkEPHfJ69fMD@dpg-cnjbqhev3ddc738bals0-a/movies_db_trabajo03
